# kafka-template

./: .gitignore  README.md  docker-compose.yml
cfg/cluster/: docker-compose.yml
cfg/cluster/broker/: server.properties
cfg/cluster/controller/: server.properties
cfg/single-node/: docker-compose.yml  server.properties
example/C++/: CMakeLists.txt  Makefile  compile_commands.json  consumer.cpp  producer.cpp
example/C++/include/: globals.hpp
example/Python/: consumer.py  globals.py  producer.py  pyrightconfig.json
secrets/: README.md
